Iconos en Menu y Cambio de Estilos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,29 @@
+* {
+	padding:0;
+	margin:0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 /* Header */
 .navbar {
     margin-bottom: 0;
+    background: #29aae3;
+    padding: 0 20px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #fff;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    color: #000;
+    background-color: #fff;
+	-webkit-transition:all 500ms ease;
+	-o-transition:all 500ms ease;
+	transition:all 500ms ease;
+	border-radius:50px;
 }
 
 .jumbotron {
