--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,7 @@
 
 .navbar-inverse .navbar-nav > li > a {
     color: #fff;
+    padding: 20px 50px;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
